# CellularAutomation

./: Automation.h  CMakeLists.txt  Field.h  Graphic.h  Painter.h  SettingsStore.h  main.cpp
